//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative  login_service.proto
syntax = "proto3";
package login;
option go_package = "user/login/";


message CaptchaMessage {
  string mobile = 1;
}
message CaptchaResponse{
  string code = 1;
}

message RegisterMessage {
  string mobile = 1;
  string name = 2;
  string password = 3;
  string captcha = 4;
  string email = 5;
}
message RegisterResponse{
}
service LoginService {
  rpc GetCaptcha(CaptchaMessage) returns (CaptchaResponse) {}
  rpc Register(RegisterMessage) returns (RegisterResponse) {}
}